--- a/MatchCatsGame/MainWindow.xaml
+++ b/MatchCatsGame/MainWindow.xaml
@@ -20,25 +20,26 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="0" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="0" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="0" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="0" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="0" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="0" MouseDown="TextBlock_MouseDown" />
         
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="1" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="1" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1" MouseDown="TextBlock_MouseDown" />
         
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="2" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="2" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="2" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="2" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" MouseDown="TextBlock_MouseDown" />
         
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="3" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="3" />
-        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="3" />
-
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="0" Grid.Row="3" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="2" Grid.Row="3" MouseDown="TextBlock_MouseDown" />
+        <TextBlock FontSize="36" HorizontalAlignment="Center" Text="?" VerticalAlignment="Center" Grid.Column="3" Grid.Row="3" MouseDown="TextBlock_MouseDown" />
+        
+        <TextBlock x:Name="timeTextBlock" Text="Time: " FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="4" Grid.Row="4" MouseDown="TimeTextBlock_MouseDown" />
     </Grid>
 </Window>
